--- a/index.html
+++ b/index.html
@@ -1,66 +1,48 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <title>Sign Up | Log In</title>
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- ===( CODE AASHU )=== -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Animated Login Form | CODE AASHU</title>
+    <!-- === Custom CSS === -->
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-<div class="wrapper">
-    <div class="title-text">
-        <div class="title login">
-            Account
-        </div>
-        <div class="title signup">
-            Account
-        </div>
+<section>
+    <div class="login-box">
+        <form action="">
+            <h2>Login</h2>
+            <div class="input-box">
+                <span class="icon"><ion-icon name="mail"></ion-icon> </span>
+                <input type="email" required>
+                <label> Email</label>
+            </div>
+            <div class="input-box">
+                <span class="icon"><ion-icon name="lock-closed"></ion-icon> </span>
+                <input type="password" required>
+                <label> Password</label>
+            </div>
+            <div class="remember-forget">
+                <label>
+                    <input type="checkbox">Remember Me
+                </label>
+                <a href="#">Forget Password</a>
+            </div>
+            <button type="Submit">Login</button>
+            <div class="register-link">
+                <p>Don't have an account?
+                    <a href="#">Register</a>
+                </p>
+            </div>
+        </form>
     </div>
-    <div class="form-container">
-        <div class="slide-controls">
-            <input type="radio" name="slide" id="login" checked>
-            <input type="radio" name="slide" id="signup">
-            <label for="login" class="slide login">Login</label>
-            <label for="signup" class="slide signup">SignUp</label>
-            <div class="slider-tab"></div>
-        </div>
-        <div class="form-inner">
-            <form action="#" class="login">
-                <div class="field">
-                    <input type="text" placeholder="Email Address" required>
-                </div>
-                <div class="field">
-                    <input type="password" placeholder="Password" required>
-                </div>
-                <div class="pass-link">
-                    <a href="#">Reset password?</a>
-                </div>
-                <div class="field btn">
-                    <div class="btn-layer"></div>
-                    <input type="submit" value="Login">
-                </div>
-                <div class="signup-link">
-                    Don't Have Account? <a href="">Create A New</a>
-                </div>
-            </form>
-            <form action="#" class="signup">
-                <div class="field">
-                    <input type="text" placeholder="Email Address" required>
-                </div>
-                <div class="field">
-                    <input type="password" placeholder="Password" required>
-                </div>
-                <div class="field">
-                    <input type="password" placeholder="Confirm Password" required>
-                </div>
-                <div class="field btn">
-                    <div class="btn-layer"></div>
-                    <input type="submit" value="SignUp">
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
-<script src="script.js"></script>
+</section>
+
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
+
 </html>
